--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,4 +1,6 @@
-<table class='table'>
+<h2>Follower Users</h2>
+<% if @users.exists? %>
+<table>
   <thead>
     <tr>
       <th>image</th>
@@ -7,23 +9,17 @@
     </tr>
   </thead>
   <tbody>
-    <% users.each do |user| %>
+    <% @users.each do |user| %>
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
         <td>フォロー数: <%= user.followings.count %></td>
         <td>フォロワー数: <%= user.followers.count %></td>
-        <td>
-          <% unless current_user == user %>
-            <% if current_user.following?(user) %>
-              <%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete %>
-            <% else %>
-              <%= link_to 'フォローする', user_relationships_path(user.id), method: :POST %>
-            <% end %>
-          <% end %>
-        </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<% else %>
+  <p>ユーザーはいません</p>
+<% end %>
