--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,14 +20,18 @@
           <td id="favorite-btn_<%= @book.id %>">
             <%= render "favorites/favorite-btn", book: @book %>
           </td>
-          <td>コメント数: <%= @book.book_comments.count %></td>
+          <td id="comment_count">
+            <%= render "books/comment_count", book: @book %>
+          </td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
-      <%= render 'books/comment', book: @book,book_comment: @book_comment%>
+      <div id="book_comments">
+        <%= render 'books/comment', book: @book, book_comment: @book_comment %>
+      </div>
     </div>
   </div>
 </div>
