--- a/app/views/books/_comment.html.erb
+++ b/app/views/books/_comment.html.erb
@@ -15,7 +15,7 @@
     </tr>
   <% end %>
 </table>
-  <%= form_with model:[book,BookComment.new], remote: true do |f| %>
-    <%= f.text_area :comment, size:"90x5" %><br>
-    <%= f.submit '送信'%>
-  <% end %>
+  <!--%= form_with model:[book,BookComment.new], remote: true do |f| %>-->
+    <!--%= f.text_area :comment, size:"90x5" %><br>-->
+    <!--%= f.submit '送信'%>-->
+  <!--% end %>-->
