--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,7 +1,7 @@
 <table class='table table-hover table-inverse'>
-  <%= link_to '新しい順', books_path(sort_update: "true") %>
-   | <%= link_to '評価の高い順', books_path(sort_rate: "true") %>
   <thead>
+    <%= link_to '新しい順', books_path(sort_create: "true")%>
+   | <%= link_to '評価の高い順', books_path(sort_rate: "true")%>
     <tr>
       <th>Title</th>
       <th>Opinion</th>
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <% books.each do |book| %>
+    <% books.each do |book|%>
       <tr>
         <td><%= link_to user_path(book.user) do %>
           <%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %>
