課題コード修正

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,6 +24,20 @@
             <%= render "books/comment_count", book: @book %>
           </td>
           <td id="star-rate-<%= @book.id %>"></td>
+          <script>
+             // 繰り返し処理でもidをidを一意にできるようにnote_idを入れる
+            $('#star-rate-<%= @book.id %>').raty({
+              size: 36,
+              starOff:  '<%= asset_path('star-off.png') %>',
+              starOn : '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
+              // 読み込みだけで入力できない
+              readOnly: true,
+              //投稿された星の入力値を読み込む
+              score: <%= @book.rate %>,
+             });
+          </script>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
@@ -42,15 +56,3 @@
     </div>
   </div>
 </div>
-<script>
- // 繰り返し処理でもidをidを一意にできるようにnote_idを入れる
-  $('#star-rate-<%= @book.id %>').raty({
-    size: 36,
-    starOff:  '<%= asset_path('star-off.png') %>',
-    starOn : '<%= asset_path('star-on.png') %>',
-    // 読み込みだけで入力できない
-    readOnly: true,
-    //投稿された星の入力値を読み込む
-    score: <%= @book.rate %>,
-  });
-</script>
