--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,17 +9,20 @@
   </div>
   <div class="form-group" id="star">
     <%= f.label :rate,  "Rate" %>
-    <%= f.hidden_field :rate, id: :review_star %>
+    <%= f.hidden_field :rate, id: :review_star, class: 'form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
-<% end %>
-  <script type="text/javascript">
+  <script>
     $('#star').raty({
       size     : 36,
       starOff:  '<%= asset_path('star-off.png') %>',
       starOn : '<%= asset_path('star-on.png') %>',
+      starHalf: '<%= asset_path('star-half.png') %>',
       scoreName: 'book[rate]',
+      half: true,
     });
   </script>
+  <div class="form-group">
+    <%= f.submit class: 'btn btn-success' %>
+  </div>
+<% end %>
+  
