--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,7 +1,5 @@
 <table class='table table-hover table-inverse'>
   <thead>
-    <%= link_to '新しい順', books_path(sort_create: "true")%>
-   | <%= link_to '評価の高い順', books_path(sort_rate: "true")%>
     <tr>
       <th>Title</th>
       <th>Opinion</th>
@@ -28,6 +26,8 @@
               size: 36,
               starOff:  '<%= asset_path('star-off.png') %>',
               starOn : '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
               // 読み込みだけで入力できない
               readOnly: true,
               //投稿された星の入力値を読み込む
