--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -12,23 +12,22 @@
           <%= f.label :opinion %>
           <%= f.text_area :body, class: 'form-control book_body' %>
         </div>
-        <div class="form-group" id="star">
-          <%= f.label :rate,  "Rate" %>
-          <%= f.hidden_field :rate, id: :review_star %>
-        </div>
+        <div class="form-group" id="rate_<%= @book.id %>"></div>
+        <script>
+          $('#rate_<%= @book.id %>').raty({
+            size     : 36,
+            starOff:  '<%= asset_path('star-off.png') %>',
+            starOn : '<%= asset_path('star-on.png') %>',
+            starHalf: '<%= asset_path('star-half.png') %>',
+            readOnly: true,
+            half: true,
+            score: <%= @book.rate %>,
+          });
+        </script>
         <div class="form-group">
           <%= f.submit class: 'btn btn-success' %>
         </div>
       <% end %>
-        <script type="text/javascript">
-          $('#star').raty({
-            size     : 36,
-            starOff:  '<%= asset_path('star-off.png') %>',
-            starOn : '<%= asset_path('star-on.png') %>',
-            readOnly: true,
-            score: <%= @book.rate %>,
-          });
-        </script>
   		<%= link_to 'Show', book_path(@book), class: "book_#{@book.id}" %> |
   		<%= link_to 'Back', books_path, class: "back" %>
   	</div>
