--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,8 +1,10 @@
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
+      <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,6 +17,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td><%= book.category %></td>
         <td id="favorite-btn_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
