--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,12 @@
           <li><%= link_to ' Users',users_path,class: 'fas fa-users nav-link text-light' %></li>
           <li><%= link_to ' Books',books_path ,class: 'fas fa-book-open nav-link text-light'%></li>
           <li><%= link_to ' logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+          <li>
+            <%= form_with url: search_books_path, method: :get, local: true do |f| %>
+              <%= f.text_field :search %>
+              <%= f.submit :検索, class: "btn btn-primary" %>
+            <% end %>
+          </li>
         <% else %>
           <li><%= link_to ' Home',root_path,class: 'fas fa-home nav-link text-light' %></li>
           <li><%= link_to ' About',home_about_path,class: 'fas fa-link nav-link text-light' %></li>
@@ -22,15 +28,4 @@
       </div>
     </div>
   </nav>
-  <div class="row">
-    <div class="col-xs-6 col-xs-offset-3 text-center mx-auto" style="margin-top: 25px;">
-      <% if user_signed_in? %>
-        <%= form_with url:search_path, method: :get, local: true do |f| %>
-          <%= f.text_field 'search[value]' %>
-          <%= f.select 'search[model]', options_for_select({ "User" => "user", "Book" => "book" }) %>
-          <%= f.select 'search[how]', options_for_select({ "完全一致" => "match", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partical"  }) %>            <%= f.submit :"検索" %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
 </header>
