--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,8 @@
           <li><%= link_to ' Books',books_path ,class: 'fas fa-book-open nav-link text-light'%></li>
           <li><%= link_to ' logout', destroy_user_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
           <li>
-            <%= form_with url: search_books_path, method: :get, local: true do |f| %>
-              <%= f.text_field :search %>
+            <%= form_with url: search_path, method: :get, local: true do |f| %>
+              <%= f.text_field :keyword %>
               <%= f.submit :検索, class: "btn btn-primary" %>
             <% end %>
           </li>
