--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <%= f.label :category %>
-    <%= f.text_field :category, class: "form-control book_category" %>
+    <%= f.text_field :category, class: "form-control" %>
   </div>
   <div class="form-group" id="star">
     <%= f.label :rate,  "Rate" %>
