--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <td><%= book.category %></td>
+        <td><%= link_to book.category, search_path(keyword: book.category) %></td>
         <td id="favorite-btn_<%= book.id %>">
           <%= render "favorites/favorite-btn", book: book %>
         </td>
